<?xml version="1.0"?>
<package>
  <name>razbot2_control</name>
  <version>0.0.1</version>
  <description>RazBot controller configuration, contains environment-independent configuration</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
</package>
